k8s/railsapp_deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: railsapp-deployment
  namespace: proyecto6
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: railsapp
    spec:
      containers:
      - name: railsapp
        image: jloaiz16/aplicacion:1.0

        ports:
        - name: nodejs-port
          containerPort: 3000
      - name: api-nginx
        image: nginx:1.13.8
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: webapp-nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
