k8s/aplicacion-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: aplicacion-server
  namespace: proyecto6

spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: aplicacion-server
  type: NodePort
