k8s/railsapp_service.yml
apiVersion: v1
kind: Service
metadata:
  name: railsapp-service
  namespace: proyecto6
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: railsapp
  type: NodePort
