k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aplicacion-ingress
  namespace: proyecto6

  # annotations:
  #   kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - host: proyecto6.dis.eafit.edu.co
      http:
        paths:
          - path: /
            backend:
              serviceName: aplicacion-webapp-svc
              servicePort: 80
